...
                android:paddingStart="?android:attr/scrollbarSize"
                android:paddingEnd="?android:attr/scrollbarSize"
                android:layout_marginTop="5dp">


                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/macro_activity_macro_name_label" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
...
                android:layout_below="@+id/dynamic_value_button"
                android:paddingStart="?android:attr/scrollbarSize"
                android:paddingEnd="?android:attr/scrollbarSize"
                >

                <EditText
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/macro_activity_macro_description_label" />

            </android.support.design.widget.TextInputLayout>

...
