<resources>
    <string name="app_name">Expander</string>
    <string name="title_activity_main2">Expander</string>
    <string name="title_activity_macro"> </string>

    <string name="accessibility_service_description">Accessibility Service Permission used to expand your defined macros phrases. In order for Expander to work, this permission will need to be enabled.</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="settings_activity_toolbar_label">Settings</string>
    <string name="settings_activity_floating_UI_pref_category_title">Floating UI Settings</string>
    <string name="settings_activity_draw_over_other_apps_permission_disabled">Enable Floating Indicator</string>
    <string name="settings_activity_draw_over_other_apps_permission_enabled">Disable Floating Indicator</string>
    <string name="settings_activity_draw_over_other_apps_permission_enabled_old">Disable Permission to Draw floating UI on the screen</string>
    <string name="settings_activity_draw_over_other_apps_permission_disabled_summary">Tap to turn on the permission to display a floating indicator after text expansion</string>
    <string name="settings_activity_draw_over_other_apps_permission_enabled_summary">Tap to turn off the permission to display a floating indicator after text expansion</string>
    <string name="settings_activity_floating_UI_key">floatingUISetting</string>
    <string name="settings_activity_FloatingUI_Opacity_Level_Summary">Tap to adjust the opacity level of the floating UI</string>
    <string name="settings_activity_Opacity_Level_Setting_Title">Floating UI Opacity Level</string>
    <string name="settings_dialog_message">Current Opacity is:</string>
    <string name="settings_summary">Current Opacity is $1</string>
    <string name="settings_unit">%</string>
    <string name="settings_title">Floating UI Opacity Level</string>
    <string name="setting_activity_floatingUI_opacity_level_summary_text">Tap to set the Opacity level of the floating UI</string>
    <string name="settings_activity_preference_category_title_application_exclusion_inclusions">Application Exclusion/Inclusion Settings</string>
    <string name="setting_activity_applistfiltertype_on_summary">All applications are allowed by default. Tap "Excluded Applications" below to manage what apps should be excluded.</string>
    <string name="setting_activity_applistfiltertype_off_summary">All applications are blocked by default. Tap "White Listed Applications" below to manage what apps should be included.</string>
    <string name="setting_activity_preference_category_general_title">General Settings</string>
    <string name="settings_activity_enable_app_permission_title">Enable Expander</string>
    <string name="settings_activity_enable_dynamic_value_permission_title">Enable Dynamic Values</string>
    <string name="settings_activity_floating_ui_set_color_title">Floating UI Color</string>
    <string name="settings_activity_floating_ui_set_color_summary">Tap to set the color of the Floating UI</string>
    <string name="settings_activity_redo_button_label">Display Redo Button</string>
    <string name="settings_activity_redo_button_description">If checked, a redo button will be displayed after text expansion has been undone, allowing user to redo the text expansion.</string>
    <string name="settings_activity_undo_button_label">Display Undo Button</string>
    <string name="settings_activity_undo_button_description">If checked, an undo button will be displayed after text has been expanding, allowing for it to be undone.</string>
    <string name="settings_activity_sync_settings_title">Sync Settings</string>
    <string name="settings_activity_sync_settings_summary">Tap to setup/manage shortcut sync settings</string>

    <string name="key_application_list">ApplicationList</string>

    <string name="string_extra_macro_name">MACRONAME</string>

    <string name="accessibility_enabled">com.wanderfar.expander/.Services.MacroAccessibilityService</string>
    <string name="main_activity_accessibility_settings_snackbar_link_label">Open Settings</string>
    <string name="main_activity_no_macro_found_text">No Shortcuts found. Tap the + button to start creating them!</string>
    <string name="maine_activity_accessibility_settings_snackbar_not_enabled_label">Please enable Accessibility Settings permission for %s. This is a required permission for the app to work.</string>


    <string name="about_activity_main_description">Expander is a free and open source text expansion application. For any issues, feature requests, or if you just want to chat please reach out using the below contact information!</string>
    <string name="about_activity_contact_group_label">Contact Information</string>
    <string name="about_activity_email_label">wanderfarapps@gmail.com</string>
    <string name="about_activity_github_label">bhubie/Expander</string>
    <string name="about_activity_version_group_label">Version</string>
    <string name="about_activity_open_source_group_label">Open Source Libraries</string>
    <string name="about_activity_open_source_paper_title">Paper by Pilgr</string>
    <string name="about_activity_open_source_paper_link">https://github.com/pilgr/Paper</string>
    <string name="about_activity_open_source_about_page_title">Android About Page by Medyo</string>
    <string name="about_activity_open_source_about_page_link">https://github.com/medyo/android-about-page</string>
    <string name="about_activity_open_source_color_picker_title">color-picker-view</string>
    <string name="about_activity_open_source_color_picker_link">https://github.com/bhubie/color-picker-view</string>
    <string name="about_activity_open_source_app_intro_title">AppIntro by apl-devs</string>
    <string name="about_activity_open_source_app_intro_link">https://github.com/apl-devs/AppIntro</string>

    <string name="app_intro_activity_slide_one_description">Expander is a free and open source text expansion application. Setup text shortucts that will expand into full phrases when typed.</string>
    <string name="app_intro_activity_slide_one_label">Welcome to Expander!</string>
    <string name="app_intro_activity_accessibility_slide_description">In order for Expander to work, you will need to turn on the accessibility permission for it. Tap to turn it on/off.</string>
    <string name="app_intro_activity_accessibility_slide_label">Accessibility Permission</string>
    <string name="app_intro_activity_contact_slide_label">Questions/Issues?</string>
    <string name="app_intro_activity_contact_slide_description">For any questions, issues, or feature requests, please reach out via email or file an issue on Github</string>

    <string name="macro_activity_dynamic_value_button_text">Add Dynamic (Always Changing) Value</string>
    <string name="macro_activity_expand_when_title">When to expand text:</string>
    <string name="macro_activity_changes_found_title">Changes Found</string>
    <string name="macro_activity_changes_found_message_body">Would you like to save your changes?</string>
    <string name="macro_activity_changes_found_positive_button">Save</string>
    <string name="macro_activity_changes_found_negative_button">Discard</string>
    <string name="macro_activity_expand_when_dialog_title">When Should the Shortcut Expand?</string>
    <string name="macro_activity_duplicate_name_error_message">Duplicate name found, please try again</string>
    <string name="macro_activity_no_name_error_message">Please Provide a name before saving</string>
    <string name="macro_activity_no_phrase_error_message">Please provide a phrase before saving</string>
    <string name="macro_activity_macro_name_label">Shortcut Name</string>
    <string name="macro_activity_phrase_label">Shortcut Phrase</string>
    <string name="macro_activity_macro_description_label">Shortcut Description (Optional)</string>
    <string name="macro_activity_expand_within_words_label">Expand Within Words</string>
    <string name="macro_activity_expand_within_words_description">If on, the shortcut will expand when matched inside a word</string>

    <string name="sync_setting_activity_sync_enabled_title">Shortcut Sync</string>
    <string name="sync_settings_activity_sync_provider_dialog_title">Select A Service to Sync with</string>
    <string name="sync_settings_activity_starting_sync_label">Starting sync to %s</string>


    <string name="menu_settings_title">Settings</string>
    <string name="menu_macro_delete_shortcut">Delete Shortcut</string>
    <string name="menu_macro_save_shortcut_title">Save Shortcut</string>
    <string name="menu_about_title">About</string>
    <string name="menu_sort_by_title">Sort By</string>
    <string name="menu_sort_by_name_label">Shortcut Name</string>
    <string name="menu_sort_by_usage_count_label">Usage Count</string>
    <string name="menu_sort_by_last_used_label">Last Used</string>
    <string name="menu_app_intro">Replay App Intro</string>

    <string name="fragment_dynamic_value_cancel_button_title">Cancel</string>

    <string name="dynamic_value_friendly_name_day_of_week">Day of Week</string>
    <string name="dynamic_value_friendly_name_day_of_week_short">Day of Week (Short)</string>
    <string name="dynamic_value_friendly_name_day_of_month">Day of Month</string>
    <string name="dynamic_value_friendly_name_month_short">Month (Short Name)</string>
    <string name="dynamic_value_friendly_name_month">Month</string>
    <string name="dynamic_value_friendly_name_year">Year</string>
    <string name="dynamic_value_friendly_name_year_short">Year (Short)</string>
    <string name="dynamic_value_friendly_name_time_12_hours">Time (12 Hours)</string>
    <string name="dynamic_value_friendly_name_time_24_hours">Time (24 Hours)</string>
    <string name="dynamic_value_friendly_name_date">Date</string>
    <string name="dynamic_value_friendly_name_clipboard">Device Clipboard</string>
    <string name="dynamic_value_friendly_name_phone">Phone Make &amp; Model</string>

    <string-array name="empty_array" />

    <string-array name="entry">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>


    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="expand_when_labels">
        <item>Immediately</item>
        <item>On a Space</item>
        <item>On a Period</item>
        <item>On a Space or Period</item>
    </string-array>

    <string-array name="sync_providers">
        <item>Google Drive</item>
        <item>Dropbox</item>
    </string-array>
</resources>
